save messages in scenario
